# SwigFactorial

./: .gitignore  CMakeLists.txt  README.md  TREE.md
R/: CMakeLists.txt  factorial.cpp  factorial.i  factorial_test.R
csharp/: CMakeLists.txt  Main.cs  README.md  README.md3  commands.md  factorial.cpp  factorial.h  factorial.i
golang/: README.md  main.go
java/: CMakeLists.txt  Main.java  README.md  commands.md  factorial.i
lua/: CMakeLists.txt  README.md  factorial.i  factorial_test.lua
octave/: CMakeLists.txt  README.md  commands.txt  myfactorial.cpp  myfactorial.h  myfactorial.i
python/: CMakeLists.txt  README.md  commands.txt  factorial.h  factorial.i  factorial_test.py
